Fixed the testimonial section
Added a scroll bar on small screens

--- a/index.html
+++ b/index.html
@@ -146,22 +146,22 @@
 
     <div class="fourthpart">
         <h1 class="offcli">OFFERING TO MY CLIENTS</h1>
-        <p class="fptext">If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $.17 each.</p>
+        <p class="fptext">Working with me on your project will give you the best and most price worthy results, i can handle projects from scratch and also work on an ongoing project with ot without a team.</p>
         <div class="offerings">
             <div class="appbuild">
                 <img src="./app-development.png" alt="" width="30%" class="devpics">
                 <h3>APP DEVELOPMENT</h3>
-                <p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
+                <p>With use of progrmming languages like swift for ios, and kotlin for android, you are sure to get the best result out of me in any app project.</p>
             </div>
             <div class="webbuild">
                 <img src="./web development.png" alt="" width="30%" class="devpics" id="webdev">
                 <h3>WEBSITE DEVELOPMENT</h3>
-                <p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
+                <p>Based on user needs, websites can be built and completed within an optimal time, paying for team members will speed up development.</p>
             </div>
             <div class="appdesign">
                 <img src="./app design.png" alt="" width="30%" class="devpics">
                 <h3>APP DESIGNING</h3>
-                <p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
+                <p>Do you just want a preliminary design of how your app or website should like, i am the man  for the Job.</p>
             </div>
         </div>
     </div>
@@ -172,8 +172,10 @@
 
         <div class="myworks">
             <div class="site1">
+                <div style="position: relative;">
                 <a href="https://moniepoint.com/"><img src="./div1.png" alt="" class="imges"></a>
                 <p class="webnames">MONIE POINT</p>
+            </div>
             </div>
             <div class="site2">
                 <a href="https://helo.land/"><img src="./div2.png" alt=""  class="imges"></a>
