already commited before

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p class="heb">HELLO EVERYBODY, I AM</p>
             <h1 class="myname">EMMANUEL <br> FESTUS</h1>
             <p class="fed">JUNIOR FRONT END DEVELOPER</p>
-            <P class="fedp">You will begin to realise why this exercise is called the Dickens Pattern (with reference to the ghost showing Scrooge some different futures)</P>
+            <P class="fedp">Bringing ideas to life through programming requires a deep understanding of the tools and technologies at your disposal, as well as the ability to think critically and solve problems. It's a process that requires patience, persistence, and a willingness to learn and adapt. But the end result is always worth it, as you get to see your ideas come to life and make a positive impact on the world.</P>
             <div class="dob"><i  style="color: rgb(118,113,255);" class="fa-regular fa-calendar-days"></i>   30th June 2001</div>
             <div class="phno"><i style="color: rgb(118,113,255);"  class="fa-solid fa-phone"></i>   +2348151328879</div>
             <div class="mail"><i style="color: rgb(118,113,255);"  class="fa-solid fa-envelope"></i></i>   Emmanese2020@gmail.com</div>
