added some real words inplace of lorem ipsum in the testimony section

--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
 
     <div class="sixthpart">
         <h1 class="test">TESTIMONIALS</h1>
-        <div class="testimonyme">If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $.17 each.</div>
+        <div class="testimonyme">Previous clients' kind words reflect strong relationships and the trust placed in me. Their feedback motivates me to strive for excellence. </div>
         <div class="futcaro">
             <div class="caro1">
-                <p class="comment">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum temporibus porro quam magnam consequatur explicabo in sed ipsam quasi ab.</p>
+                <p class="comment">Your excellent services, attention to detail, professionalism, and dedication to meeting my needs were greatly appreciated. I would highly recommend you to others in need of similar services.</p>
                 <h4 class="namecomm">KUNLE FASHINA</h4>
                 <div class="star">
                     <span><i class="fa-solid fa-star"></i></span>
@@ -216,7 +216,7 @@
                 </div>
             </div>
             <div class="caro2">
-                <p class="comment">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum temporibus porro quam magnam consequatur explicabo in sed ipsam quasi ab.</p>
+                <p class="comment">Your services have been top-notch and exceeded my expectations. Your expertise, efficiency, and responsiveness have been impressive. Thank you for all that you have done for me.</p>
                 <h4>BAYO FASUYI</h4>
                 <div class="star">
                     <span><i class="fa-solid fa-star"></i></span>
@@ -227,7 +227,7 @@
                 </div>
             </div>
             <div class="caro3">
-                <p class="comment">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum temporibus porro quam magnam consequatur explicabo in sed ipsam quasi ab.</p>
+                <p class="comment">I am grateful for the excellent services you provided and your professionalism, attention to detail, and personalized approach. I highly recommend your services to anyone in need..</p>
                 <h4>TOLU ALLO</h4>
                 <div class="star">
                     <span><i class="fa-solid fa-star"></i></span>
