Centralized the this year button in third part div

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <li><p class="limove">From 2017 to 2022</p></li>
                     <li class="circledot"><div class="whitedot"></div></li>
                     <li>
-                        <h3>LANDMARK UNIVERSITY</h3>
+                        <h3 class="schname">LANDMARK UNIVERSITY</h3>
                         <p>100 level to 500 level where i studied mechanical engineering</p>
                     </li>
                 </ul>
@@ -127,7 +127,7 @@
                     <li> <p class="limove">From 2011 to 2017</p></li>
                     <li class="circledot"><div class="whitedot"></div></li>
                     <li>
-                        <h3>RAY-FIELD PRIMARY SCHOOL</h3>
+                        <h3 class="schname">RAY-FIELD SECONDARY SCHOOL</h3>
                         <p>Jss1 to SS3 where i majored in Science</p>
                     </li>
                 </ul>
@@ -136,7 +136,7 @@
                     <li><p class="limove">From 2007 to 2011</p></li>
                     <li class="circledot"><div class="whitedot"></div></li>
                     <li>
-                        <h3>RAY-FIELD PRIMARY SCHOOL</h3>
+                        <h3 class="schname">RAY-FIELD PRIMARY SCHOOL</h3>
                         <p>Primary 1 to Primary 4</p>
                     </li>
                 </ul>
