added some actual text inside the about myself section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="secondpart">
         <div class="sp-firsthalf">
             <h1 class="abm">ABOUT MYSELF</h1>
-            <p class="pabm">Inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is often laughed.</p>
+            <p class="pabm">I have been working in the tech industry for a number of years, and in that time I have gained a wealth of experience and knowledge in a variety of programming languages and frameworks. I am always eager to learn more and stay up-to-date on the latest technologies.</p>
             <div class="sp-achcontain">
                 <div class="total-donat">
                     <h2>$2.5M</h2>
