fixed a lot of stuffs, mostly for medium devices, border readius for md, footer for md, changed price in donations, removed apk pure for a different company website, added actual links to my social media icons

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <!-- putfont awesome here -->
             <div class="awes">           
                 <a href="https://facebook.com/"><div class="aweclass"><i class="fa-brands fa-facebook-f"></i></div></a>
-                <a href="https://twitter.com/"><div class="aweclass"><i class="fa-brands fa-twitter"></i></div></a>
-                <a href="https://linkedin.com/"><div class="aweclass"><i class="fa-brands fa-linkedin-in"></i></div></a>
+                <a href="https://twitter.com/general_ik"><div class="aweclass"><i class="fa-brands fa-twitter"></i></div></a>
+                <a href="https://www.linkedin.com/in/emmanuel-esekhaigbe-3b9046241/"><div class="aweclass"><i class="fa-brands fa-linkedin-in"></i></div></a>
             </div>
 
         </div>
@@ -57,7 +57,7 @@
             <p class="pabm">I have been working in the tech industry for a number of years, and in that time I have gained a wealth of experience and knowledge in a variety of programming languages and frameworks. I am always eager to learn more and stay up-to-date on the latest technologies.</p>
             <div class="sp-achcontain">
                 <div class="total-donat">
-                    <h2>$2.5M</h2>
+                    <h2>₦200K</h2>
                     <p style="color:gray; margin-top: 5px;">Project Donations</p>
                 </div>
                 <div class="total-proj">
@@ -168,7 +168,7 @@
 
     <div class="fifthpart">
         <h1 class="mycomp">MY COMPLETED PROJECTS</h1>
-        <p class="whoare">Who are in extremely love with eco friendly system.</p>
+        <p class="whoare">All projects displayed here are just placeholders for the meantime, while i make actual accomplishments and replace them.</p>
 
         <div class="myworks">
             <div class="site1">
@@ -182,8 +182,8 @@
                 <p class="webnames">HELO</p>
             </div>
             <div class="site3">
-                <a href="https://apkpure.com"><img src="./div3.png" alt=""  class="imges"></a>
-                <p class="webnames">APKPURE</p>
+                <a href="https://www.mckinsey.com/"><img src="./div3.png" alt=""  class="imges"></a>
+                <p class="webnames">MCKINSEY</p>
             </div>
             <div class="site4">
                 <a href="https://tribuneonlineng.com/"><img src="./div4.png" alt="" class="imges"></a>
@@ -267,9 +267,9 @@
             
             <div class="fontawe2">
                 <span><a href="https://www.facebook.com/" style="color: white;"><i class="fa-brands fa-square-facebook"></i></a></span>
-                <span><a href="https://www.twitter.com/" style="color: white;"><i class="fa-brands fa-twitter"></i></a></i></span>
-                <span><a href="https://www.instagram.com/" style="color: white;"><i class="fa-brands fa-instagram"></i></a></span>
-                <span><a href="https://www.linkedin.com/" style="color: white;"><i class="fa-brands fa-linkedin-in"></i></a></span>
+                <span><a href="https://twitter.com/general_ik" style="color: white;"><i class="fa-brands fa-twitter"></i></a></i></span>
+                <span><a href="https://www.instagram.com/_a.i.k.e/" style="color: white;"><i class="fa-brands fa-instagram"></i></a></span>
+                <span><a href="https://www.linkedin.com/in/emmanuel-esekhaigbe-3b9046241/" style="color: white;"><i class="fa-brands fa-linkedin-in"></i></a></span>
             </div>
         </div>
     </footer>
