Changed contact to contact me, added a nowrap style to the nav links

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li class="navoneli">SERVICES</li>
                 <li class="navoneli">PAGES</li>
                 <li class="navoneli">BLOG</li>
-                <li class="navoneli">CONTACT</li>
+                <li class="navoneli">CONTACT ME</li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
