Added a contact-me.html, and contact-style.css This makes reference to the new contact page, it is done and well reactive on all mobile screens, the navbar uses the same style sheet and its all imported

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <nav class="navbar-one" id="mynav">
             <h2 class="main-head-name">MY PROFILE</h2>
             <ul class="navoneul">
-                <li class="navoneli">HOME</li>
-                <li class="navoneli">ABOUT</li>
-                <li class="navoneli">SERVICES</li>
-                <li class="navoneli">PAGES</li>
-                <li class="navoneli">BLOG</li>
-                <li class="navoneli">CONTACT ME</li>
+                <li class="navoneli"><a href="index.html" class="linkst">HOME</a></li>
+                <li class="navoneli"><a href="" class="linkst">ABOUT</a></li>
+                <li class="navoneli"><a href="" class="linkst">SERVICES</a></li>
+                <li class="navoneli"><a href="" class="linkst">RESUME</a></li>
+                <li class="navoneli"><a href="" class="linkst">BLOG</a></li>
+                <li class="navoneli"><a href="contact-me.html" class="linkst">CONTACT ME</a></li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
