although done on the wrong branch, i fixed the bugof the about section going under the main display card

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h2 class="main-head-name">MY PROFILE</h2>
             <ul class="navoneul">
                 <li class="navoneli"><a href="index.html" class="linkst">HOME</a></li>
-                <li class="navoneli"><a href="" class="linkst">ABOUT</a></li>
+                <li class="navoneli" onclick="about()">ABOUT</li>
                 <li class="navoneli"><a href="" class="linkst">SERVICES</a></li>
                 <li class="navoneli"><a href="" class="linkst">RESUME</a></li>
                 <li class="navoneli"><a href="" class="linkst">BLOG</a></li>
