added links to actual places on nav bar on main website and on contact website

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <ul class="navoneul">
                 <li class="navoneli"><a href="index.html" class="linkst">HOME</a></li>
                 <li class="navoneli" onclick="about()">ABOUT</li>
-                <li class="navoneli"><a href="" class="linkst">SERVICES</a></li>
+                <li class="navoneli" onclick="service()">SERVICES</li>
                 <li class="navoneli"><a href="" class="linkst">RESUME</a></li>
-                <li class="navoneli"><a href="" class="linkst">BLOG</a></li>
+                <li class="navoneli"><a href="https://twitter.com/general_ik" class="linkst">BLOG</a></li>
                 <li class="navoneli"><a href="contact-me.html" class="linkst">CONTACT ME</a></li>
             </ul>
             <div class="hamburger">
@@ -38,10 +38,10 @@
             <p class="fed">JUNIOR FRONT END DEVELOPER</p>
             <P class="fedp">Bringing ideas to life through programming requires a deep understanding of the tools and technologies at your disposal, as well as the ability to think critically and solve problems. It's a process that requires patience, persistence, and a willingness to learn and adapt. But the end result is always worth it, as you get to see your ideas come to life and make a positive impact on the world.</P>
             <div class="dob"><i  style="color: rgb(118,113,255);" class="fa-regular fa-calendar-days"></i>   30th June 2001</div>
-            <div class="phno"><i style="color: rgb(118,113,255);"  class="fa-solid fa-phone"></i>   +2348151328879</div>
+            <div class="phno"><i style="color: rgb(118,113,255);"  class="fa-solid fa-phone"></i>   (+234)8151328879</div>
             <div class="mail"><i style="color: rgb(118,113,255);"  class="fa-solid fa-envelope"></i></i>   Emmanese2020@gmail.com</div>
             <div class="addr"><i style="color: rgb(118,113,255);"  class="fa-solid fa-house"></i>   34 Itiam street, uyo</div>
-            <!-- putfont awesome here -->
+            <!-- put font awesome here -->
             <div class="awes">           
                 <a href="https://facebook.com/"><div class="aweclass"><i class="fa-brands fa-facebook-f"></i></div></a>
                 <a href="https://twitter.com/general_ik"><div class="aweclass"><i class="fa-brands fa-twitter"></i></div></a>
@@ -51,7 +51,7 @@
         </div>
     </div>
 
-    <div class="secondpart">
+    <div class="secondpart" id="spid">
         <div class="sp-firsthalf">
             <h1 class="abm">ABOUT MYSELF</h1>
             <p class="pabm">I have been working in the tech industry for a number of years, and in that time I have gained a wealth of experience and knowledge in a variety of programming languages and frameworks. I am always eager to learn more and stay up-to-date on the latest technologies.</p>
@@ -144,7 +144,7 @@
        
     </div>
 
-    <div class="fourthpart">
+    <div class="fourthpart" id="fid">
         <h1 class="offcli">OFFERING TO MY CLIENTS</h1>
         <p class="fptext">Working with me on your project will give you the best and most price worthy results, i can handle projects from scratch and also work on an ongoing project with ot without a team.</p>
         <div class="offerings">
