--- a/contact-me.html
+++ b/contact-me.html
@@ -16,11 +16,11 @@
             <h2 class="main-head-name">MY PROFILE</h2>
             <ul class="navoneul">
                 <li class="navoneli"><a href="index.html" class="linkst">HOME</a></li>
-                <li class="navoneli"><a href="" class="linkst">ABOUT</a></li>
-                <li class="navoneli"><a href="" class="linkst">SERVICES</a></li>
+                <li class="navoneli"><a href="index.html#spid" class="linkst">ABOUT</a></li>
+                <li class="navoneli"><a href="index.html#fid" class="linkst">SERVICES</a></li>
                 <li class="navoneli"><a href="" class="linkst">RESUME</a></li>
-                <li class="navoneli"><a href="" class="linkst">BLOG</a></li>
-                <li class="navoneli"><a href="" class="linkst">CONTACT ME</a></li>
+                <li class="navoneli"><a href="https://twitter.com/general_ik" class="linkst">BLOG</a></li>
+                <li class="navoneli"><a href="contact-me.html" class="linkst">CONTACT ME</a></li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
@@ -58,7 +58,7 @@
         <div class="right">
             <p class="head">Contact Information</p>
             <p class="words">Feel free to contact me via any of these platforms</p>
-            <div class="phno"><i style="color: rgb(255, 255, 255);"  class="fa-solid fa-phone"></i> <p class="space">+2348151328879</p></div>
+            <div class="phno"><i style="color: rgb(255, 255, 255);"  class="fa-solid fa-phone"></i> <p class="space">(+234)8151328879</p></div>
             <div class="mail"><i style="color: rgb(255, 255, 255);"  class="fa-solid fa-envelope"></i> <p class="space">Emmanese2020@gmail.com</p></div>
             <div class="addr"><i style="color: rgb(255, 255, 255);"  class="fa-solid fa-house"></i> <p class="space">34 Itiam street, uyo</p></div>
         </div>
