Added my resume, cleaned and organized the code. Fixed the about section not showing well on all devices

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li class="navoneli"><a href="index.html" class="linkst">HOME</a></li>
                 <li class="navoneli" onclick="about()">ABOUT</li>
                 <li class="navoneli" onclick="service()">SERVICES</li>
-                <li class="navoneli"><a href="" class="linkst">RESUME</a></li>
+                <li class="navoneli"><a href="./EMMANUEL FESTUS'S RESUME.pdf" class="linkst">RESUME</a></li>
                 <li class="navoneli"><a href="https://twitter.com/general_ik" class="linkst">BLOG</a></li>
                 <li class="navoneli"><a href="contact-me.html" class="linkst">CONTACT ME</a></li>
             </ul>
@@ -141,7 +141,7 @@
                     </li>
                 </ul>
             </div>
-       
+       <div class="ghost"></div>
     </div>
 
     <div class="fourthpart" id="fid">
@@ -167,7 +167,7 @@
     </div>
 
     <div class="fifthpart">
-        <h1 class="mycomp">MY COMPLETED PROJECTS</h1>
+        <h1 class="mycomp">COMPLETED PROJECTS</h1>
         <p class="whoare">All projects displayed here are just placeholders for the meantime, while i make actual accomplishments and replace them.</p>
 
         <div class="myworks">
