fixed the about from contact page

--- a/contact-me.html
+++ b/contact-me.html
@@ -23,7 +23,7 @@
             <a href="index.html#spid" class="linkst">ABOUT</a>
           </li>
           <li class="navoneli">
-            <a href="index.html#fid" class="linkst">SERVICES</a>
+            <a href="index.html#fid2" class="linkst">SERVICES</a>
           </li>
           <li class="navoneli">
             <a href="./EMMANUEL FESTUS'S RESUME.pdf" class="linkst">RESUME</a>
