--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     </li>
                 </ul>
             </div>
-       <div class="ghost"></div>
+       <div class="ghost" id="fid2"></div>
     </div>
 
     <div class="fourthpart" id="fid">
