added a page for all my blogs

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li class="navoneli" onclick="about()">ABOUT</li>
                 <li class="navoneli" onclick="service()">SERVICES</li>
                 <li class="navoneli"><a href="./EMMANUEL FESTUS'S RESUME.pdf" class="linkst">RESUME</a></li>
-                <li class="navoneli"><a href="https://twitter.com/general_ik" class="linkst">BLOG</a></li>
+                <li class="navoneli"><a href="./Personal-blog.html" class="linkst">BLOG</a></li>
                 <li class="navoneli"><a href="contact-me.html" class="linkst">CONTACT ME</a></li>
             </ul>
             <div class="hamburger">
@@ -43,9 +43,9 @@
             <div class="addr"><i style="color: rgb(118,113,255);"  class="fa-solid fa-house"></i>   34 Itiam street, uyo</div>
             <!-- put font awesome here -->
             <div class="awes">           
-                <a href="https://facebook.com/"><div class="aweclass"><i class="fa-brands fa-facebook-f"></i></div></a>
                 <a href="https://twitter.com/general_ik"><div class="aweclass"><i class="fa-brands fa-twitter"></i></div></a>
-                <a href="https://www.linkedin.com/in/emmanuel-esekhaigbe-3b9046241/"><div class="aweclass"><i class="fa-brands fa-linkedin-in"></i></div></a>
+                <a href="https://www.linkedin.com/in/emmanuel-esekhaigbe-3b9046241/"><div class="aweclass"><i class="fa-brands fa-linkedin-in"></i></div></a>             
+                <a href="https://github.com/GeneralAike"><div class="aweclass"><i class="fa-brands fa-github"></i></div></a>
             </div>
 
         </div>
