added footer to the personal blog page

--- a/Personal-blog.html
+++ b/Personal-blog.html
@@ -53,5 +53,38 @@
             </div>
     </div>
     </a>
+    <footer>
+        <div class="aboutme">
+            <h3 class="footabout">About me</h3>
+            <p class="footp1">Do you want to be even more successful? Learn to love learning and growth. The more effort you put into improving your skills.</p>
+
+            <p class="footp2">Copyright ©2022 All rights reserved.</p>
+        </div>
+        <div class="newslet">
+            <h3 class="footnl">Newsletter</h3>
+            <p class="footp3">Stay updated with our latest trends</p>
+            <form action="" class="formfoot">
+                <div>
+                    <input class="footinput" type="text" placeholder="    Enter email address">
+                </div>
+                <div>
+                    <button class="footbutt" type="button">
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+                </div>
+            </form>
+        </div>
+        <div class="follow">
+            <h3>Follow me</h3>
+            <p class="friends">Let us be social</p>
+            
+            <div class="fontawe2">
+                <span><a href="https://www.facebook.com/" style="color: white;"><i class="fa-brands fa-square-facebook"></i></a></span>
+                <span><a href="https://twitter.com/general_ik" style="color: white;"><i class="fa-brands fa-twitter"></i></a></i></span>
+                <span><a href="https://www.instagram.com/_a.i.k.e/" style="color: white;"><i class="fa-brands fa-instagram"></i></a></span>
+                <span><a href="https://www.linkedin.com/in/emmanuel-esekhaigbe-3b9046241/" style="color: white;"><i class="fa-brands fa-linkedin-in"></i></a></span>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
