added icon to my title, added my webisite to the portfolio

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>👩‍💻Emmanuel Esekhaigbe</title>
+    <title>Emmanuel Esekhaigbe</title>
+    <link rel = "icon" href = 
+"./6840478.png" 
+        type = "image/x-icon">
     <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/a388628afc.js" crossorigin="anonymous"></script>
     
@@ -173,8 +176,8 @@
         <div class="myworks">
             <div class="site1">
                 <div style="position: relative;">
-                <a href="https://moniepoint.com/"><img src="./div1.png" alt="" class="imges"></a>
-                <p class="webnames">MONIE POINT</p>
+                <a href="https://https://shop-site-269eb.web.app/"><img src="./Screenshot (4).png" alt="" class="imges"></a>
+                <p class="webnames">WEB-SHOP</p>
             </div>
             </div>
             <div class="site2">
