--- a/Personal-blog.html
+++ b/Personal-blog.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Blog</title>
+    <link rel = "icon" href = 
+"./6840478.png" 
+        type = "image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="blog">
