redesigned the blog page and fixed a bug preventing the hamburger from toggling

--- a/Personal-blog.html
+++ b/Personal-blog.html
@@ -9,6 +9,9 @@
 "./6840478.png" 
         type = "image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body class="blog">
     <nav class="navbar-one" id="mynav">
@@ -29,33 +32,35 @@
     </nav>
     <div class="faker"></div>
     <div class="bloghead">Personal Blog</div>
-    <a href="" class="remlc">
-        <div class="container">
-            <img src="./blogpic.webp" alt="" class="bimg">
-            <div class="btext">
-                <h3 class="btopic">How to create an online shopping cart</h3>
-                <div class="bmtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis soluta fuga facilis. Id perferendis odit tenetur distinctio nam omnis sed reprehenderit, et, minima ipsam hic quidem earum! Provident, et cumque.</div>
+        <div class="blogflex">
+            <div class="container">
+                <a href="https://dev.to/aikay/developing-an-e-commerce-website-with-javascript-and-firebase-a-comprehensive-guide-series-1-3m73" class="linkblack">
+                    <img src="./emmanuel's page.jpg" alt="" class="bimg">
+                    <div class="btext">
+                        <h3 class="btopic">How to create an <span style="white-space: nowrap;">E-Commerce</span> website</h3>
+                        <div class="bmtext1">When new developers first learn Javascript, the undertake projects to enhance their skills, capabilities and have a feel for what project building is like. In this blog, i will teach you how to create an E-commerce website with just Javascript and Firebase.</div>
+                    </div>
+                </a>
             </div>
-    </div>
-    </a>
-    <a href="" class="remlc">
-        <div class="container">
-            <img src="./blogpic.webp" alt="" class="bimg">
-            <div class="btext">
-                <h3 class="btopic">How to create an online shopping cart</h3>
-                <div class="bmtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis soluta fuga facilis. Id perferendis odit tenetur distinctio nam omnis sed reprehenderit, et, minima ipsam hic quidem earum! Provident, et cumque.</div>
+            <div class="container">
+                <a href="https://dev.to/aikay/" class="linkblack">
+                        <img src="./blogpic.webp" alt="" class="bimg">
+                    <div class="btext">
+                        <h3 class="btopic">How to create an online shopping cart</h3>
+                        <div class="bmtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis soluta fuga facilis. Id perferendis odit tenetur distinctio nam omnis sed reprehenderit, et, minima ipsam hic quidem earum! Provident, et cumque.</div>
+                    </div>
+                </a>
             </div>
-    </div>
-    </a>
-    <a href="" class="remlc">
-        <div class="container">
-            <img src="./blogpic.webp" alt="" class="bimg">
-            <div class="btext">
-                <h3 class="btopic">How to create an online shopping cart</h3>
-                <div class="bmtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis soluta fuga facilis. Id perferendis odit tenetur distinctio nam omnis sed reprehenderit, et, minima ipsam hic quidem earum! Provident, et cumque.</div>
+            <div class="container">
+                <a href="https://dev.to/aikay/" class="linkblack">
+                    <img src="./blogpic.webp" alt="" class="bimg">
+                <div class="btext">
+                    <h3 class="btopic">How to create an online shopping cart</h3>
+                    <div class="bmtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis soluta fuga facilis. Id perferendis odit tenetur distinctio nam omnis sed reprehenderit, et, minima ipsam hic quidem earum! Provident, et cumque.</div>
+                </div>
+            </a>
             </div>
-    </div>
-    </a>
+        </div>
     <footer>
         <div class="aboutme">
             <h3 class="footabout">About me</h3>
@@ -89,5 +94,6 @@
             </div>
         </div>
     </footer>
+    <script src="./script.js"></script>
 </body>
 </html>
