updated the picture in blog section for a clearer version

--- a/Personal-blog.html
+++ b/Personal-blog.html
@@ -35,7 +35,7 @@
         <div class="blogflex">
             <div class="container">
                 <a href="https://dev.to/aikay/developing-an-e-commerce-website-with-javascript-and-firebase-a-comprehensive-guide-series-1-3m73" class="linkblack">
-                    <img src="./emmanuel's page.jpg" alt="" class="bimg">
+                    <img src="./emmanuel's page 2.jpg" alt="" class="bimg">
                     <div class="btext">
                         <h3 class="btopic">How to create an <span style="white-space: nowrap;">E-Commerce</span> website</h3>
                         <div class="bmtext1">When new developers first learn Javascript, the undertake projects to enhance their skills, capabilities and have a feel for what project building is like. In this blog, i will teach you how to create an E-commerce website with just Javascript and Firebase.</div>
