added another blog to the blog page

--- a/Personal-blog.html
+++ b/Personal-blog.html
@@ -43,11 +43,11 @@
                 </a>
             </div>
             <div class="container">
-                <a href="https://dev.to/aikay/" class="linkblack">
-                        <img src="./blogpic.webp" alt="" class="bimg">
+                <a href="https://dev.to/aikay/how-to-consume-an-api-with-vanilla-javascript-5ec7" class="linkblack">
+                        <img src="./IMG_2619.JPG" alt="" class="bimg">
                     <div class="btext">
-                        <h3 class="btopic">How to create an online shopping cart</h3>
-                        <div class="bmtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis soluta fuga facilis. Id perferendis odit tenetur distinctio nam omnis sed reprehenderit, et, minima ipsam hic quidem earum! Provident, et cumque.</div>
+                        <h3 class="btopic">How to Consume an API with Vanilla Javascript</h3>
+                        <div class="bmtext">API consumption or API fetching refers to the process of accessing and using data or services provided by an Application Programming Interface (API). Almost all websites use APIs to communicate with their backends or servers</div>
                     </div>
                 </a>
             </div>
